// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test ButtonCircle click event 1`] = `
<ButtonCircle
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  iconName="bomb"
  iconStyle=""
  id={null}
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  noborder={false}
  noedit={false}
  nohover={false}
  notheme={false}
  notooltip={false}
  obj="ButtonCircle"
  onClick={[MockFunction]}
  padding={null}
  ripple={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test creation of a ButtonCircle control 1`] = `
<Wrapper
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className="test-class"
  color={null}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  iconName="bomb"
  iconStyle=""
  id={null}
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  noborder={false}
  noedit={false}
  nohover={false}
  notheme={false}
  notooltip={false}
  obj="ButtonCircle"
  onClick={[Function]}
  onError={[Function]}
  padding={null}
  reset={false}
  ripple={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <ButtonCircle__ButtonCircleContainerView
    className="ui-button-circle test-class"
  >
    <ButtonCircle__ButtonCircleInnerView
      height="24px"
      width="24px"
    >
      <ButtonCircle__ButtonCircleView
        backgroundColor={null}
        border={null}
        borderColor={null}
        bottom={null}
        className="test-class"
        color={null}
        controlled={true}
        direction="right"
        disabled={false}
        err={null}
        errorMessage={null}
        focus={false}
        height={null}
        iconName="bomb"
        iconStyle=""
        id={null}
        left={null}
        location="none"
        maxHeight={null}
        maxWidth={null}
        minHeight={null}
        minWidth={null}
        noborder={false}
        noedit={false}
        nohover={false}
        notheme={false}
        notooltip={false}
        obj="ButtonCircle"
        onClick={[Function]}
        padding={null}
        ripple={true}
        selected={false}
        sizing="normal"
        style={Object {}}
        testing={true}
        theme={null}
        tooltip={null}
        top={null}
        visible={true}
        width={null}
        xcss={null}
      />
    </ButtonCircle__ButtonCircleInnerView>
  </ButtonCircle__ButtonCircleContainerView>
</Wrapper>
`;

exports[`Test disabling of a ButtonCircle control 1`] = `
<ButtonCircle
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  direction="right"
  disabled={true}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  iconName="bomb"
  iconStyle=""
  id={null}
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  noborder={false}
  noedit={false}
  nohover={false}
  notheme={false}
  notooltip={false}
  obj="ButtonCircle"
  onClick={[MockFunction]}
  padding={null}
  ripple={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test making a ButtonCircle control invisible 1`] = `
<ButtonCircle
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  iconName="bomb"
  iconStyle=""
  id={null}
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  noborder={false}
  noedit={false}
  nohover={false}
  notheme={false}
  notooltip={false}
  obj="ButtonCircle"
  onClick={[MockFunction]}
  padding={null}
  ripple={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={false}
  width={null}
  xcss={null}
/>
`;

exports[`Test retrieval of ButtonCircle props object 1`] = `
Object {
  "backgroundColor": null,
  "border": null,
  "borderColor": null,
  "bottom": null,
  "children": null,
  "className": null,
  "color": null,
  "controlled": true,
  "direction": "right",
  "disabled": false,
  "err": null,
  "errorMessage": null,
  "focus": false,
  "height": null,
  "iconName": "bomb",
  "iconStyle": "",
  "id": null,
  "left": null,
  "location": "none",
  "maxHeight": null,
  "maxWidth": null,
  "minHeight": null,
  "minWidth": null,
  "noborder": false,
  "noedit": false,
  "nohover": false,
  "notheme": false,
  "notooltip": false,
  "obj": "ButtonCircle",
  "onClick": [Function],
  "padding": null,
  "ripple": false,
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "theme": null,
  "tooltip": null,
  "top": null,
  "visible": true,
  "width": null,
  "xcss": null,
}
`;

exports[`Test retrieval of ButtonCircle props object 2`] = `
Object {
  "children": null,
  "sizing": "normal",
  "style": Object {},
}
`;
